made the app-navbar stick to the top on scroll this prevents empty space above app-navbar on smaller screens when scrolling past the threshold for the global-top-nav.

--- a/src/components/app-navbar/style.css
+++ b/src/components/app-navbar/style.css
@@ -3,6 +3,7 @@
   z-index: 1;
   border-right: 2px solid var(--eds_ui_background__light);
   height: calc(100vh - var(--layout-top-nav-height));
+  height: 100%;
 }
 .app-navbar.collapsed {
   padding: var(--eds_spacing_small);
